Hit ASSERT when editing attribute value in Element in SVG Document https://bugs.webkit.org/show_bug.cgi?id=88179

Patch by Rob Buis <rbuis@rim.com> on 2012-06-04
Reviewed by Pavel Feldman.

Make sure the <span> is created as a HTML Element regardless of document in use.

* inspector/InspectorDOMAgent.cpp:
(WebCore):
(WebCore::InspectorDOMAgent::setAttributesAsText):

Canonical link: https://commits.webkit.org/106063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119396 268f45cc-cd09-0410-ab3c-d52691b4dbfc